--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                                                                     <div class="ui red horizontal label">closed</div>
                                                                 </template>
 
-                                                                <a :href="html_url">{{ issue.title }}</a>
+                                                                <a :href="issue.html_url">{{ issue.title }}</a>
                                                             </h4>
 
                                                             <div class="description mt-2">
