--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 
-        <title>GitHub Milestones</title>
+        <title>GitHub Dashboard</title>
 
         <link rel="stylesheet" href="https://unpkg.com/semantic-ui@2.2.9/dist/semantic.min.css"/>
 
@@ -104,6 +104,18 @@
                             </template>
                         </div>
                     </div>
+
+                    <div class="item">
+                        <a href="http://kluck.engineering/github-dashboard">
+                            <i class="home icon"></i>
+                            kluck.engineering/github-dashboard
+                        </a><br>
+
+                        <a href="https://github.com/skluck/github-dashboard">
+                            <i class="github icon"></i>
+                            skluck/github-dashboard
+                        </a>
+                    </div>
                 </div>
             </div>
 
@@ -114,8 +126,8 @@
                     <h1 class="ui header">
                         <i class="github icon"></i>
                         <div class="content">
-                            GitHub Milestones
-                            <div class="sub header">A combined dashboard of milestones from multiple repos.</div>
+                            GitHub Dashboard
+                            <div class="sub header">A combined dashboard for milestones and projects from multiple repos.</div>
                         </div>
                     </h1>
 
